tests/errors/test_28.xpp
// Prefix postfix operators may only be applied to lvalue types

fn main() void {
	21++;
	++19.0;
}
